--- a/index.html
+++ b/index.html
@@ -7,23 +7,48 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <svg id="field" width="800" height="400">
-        <!-- Football Field -->
-        <rect x="0" y="0" width="800" height="400" fill="#4CAF50"/>
-        <!-- Left Goal -->
-        <rect x="0" y="150" width="20" height="100" fill="#ffffff"/>
-        <!-- Right Goal -->
-        <rect x="780" y="150" width="20" height="100" fill="#ffffff"/>
-        <!-- Left Player -->
-        <rect id="player1" x="50" y="150" width="20" height="100" fill="#ff0000"/>
-        <!-- Right Player -->
-        <rect id="player2" x="730" y="150" width="20" height="100" fill="#0000ff"/>
-        <!-- Ball -->
-        <circle id="ball" cx="400" cy="200" r="10" fill="#000000"/>
-    </svg>
+    <!-- Main container for the game -->
+    <div id="container">
+        <!-- Football field SVG -->
+        <svg id="field" width="800" height="400">
+            <!-- Football Field -->
+            <rect x="0" y="0" width="800" height="400" fill="#4CAF50"/>
+            <!-- Center Circle -->
+            <circle cx="400" cy="200" r="50" fill="none" stroke="#ffffff" stroke-width="2"/>
+            <!-- Left Penalty Area -->
+            <rect x="0" y="150" width="100" height="100" fill="none" stroke="#ffffff" stroke-width="2"/>
+            <!-- Right Penalty Area -->
+            <rect x="700" y="150" width="100" height="100" fill="none" stroke="#ffffff" stroke-width="2"/>
+            <!-- Left Goal -->
+            <rect x="0" y="150" width="20" height="100" fill="#ffffff"/>
+            <!-- Right Goal -->
+            <rect x="780" y="150" width="20" height="100" fill="#ffffff"/>
+            <!-- Halfway line -->
+            <line x1="400" y1="0" x2="400" y2="400" stroke="#ffffff" stroke-width="2"/>
+            <!-- Left Player -->
+            <rect id="player1" x="50" y="150" width="20" height="100" fill="#ff0000"/>
+            <!-- Right Player -->
+            <rect id="player2" x="730" y="150" width="20" height="100" fill="#0000ff"/>
+            <!-- Ball -->
+            <circle id="ball" cx="400" cy="200" r="10" fill="#000000"/>
+        </svg>
 
+        <!-- Score display -->
+        <div id="score">0 - 0</div>
+
+        <!-- Timer display -->
+        <div id="timer">Time: 60</div>
+
+        <!-- Button container -->
+        <div id="buttonContainer">
+            <!-- Start Game button -->
+            <button id="startButton">Start Game</button>
+            <!-- Reset Game button -->
+            <button id="resetButton">Reset Game</button>
+        </div>
+    </div>
+
+    <!-- JavaScript file for game logic -->
     <script src="game.ts"></script>
 </body>
 </html>
-
-
