--- a/index.html
+++ b/index.html
@@ -4,51 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Football Game</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Main container for the game -->
-    <div id="container">
-        <!-- Football field SVG -->
-        <svg id="field" width="800" height="400">
-            <!-- Football Field -->
+    <div class="container">
+        <!-- Football Field -->
+        <svg id="footballField" width="800" height="400">
             <rect x="0" y="0" width="800" height="400" fill="#4CAF50"/>
-            <!-- Center Circle -->
-            <circle cx="400" cy="200" r="50" fill="none" stroke="#ffffff" stroke-width="2"/>
-            <!-- Left Penalty Area -->
-            <rect x="0" y="150" width="100" height="100" fill="none" stroke="#ffffff" stroke-width="2"/>
-            <!-- Right Penalty Area -->
-            <rect x="700" y="150" width="100" height="100" fill="none" stroke="#ffffff" stroke-width="2"/>
+
             <!-- Left Goal -->
-            <rect x="0" y="150" width="20" height="100" fill="#ffffff"/>
+            <g id="leftGoal">
+                <rect x="0" y="150" width="20" height="100" fill="#FFF"/>
+                <rect x="0" y="200" width="20" height="5" fill="#FFF"/>
+            </g>
+
             <!-- Right Goal -->
-            <rect x="780" y="150" width="20" height="100" fill="#ffffff"/>
-            <!-- Halfway line -->
-            <line x1="400" y1="0" x2="400" y2="400" stroke="#ffffff" stroke-width="2"/>
-            <!-- Left Player -->
-            <rect id="player1" x="50" y="150" width="20" height="100" fill="#ff0000"/>
-            <!-- Right Player -->
-            <rect id="player2" x="730" y="150" width="20" height="100" fill="#0000ff"/>
+            <g id="rightGoal">
+                <rect x="780" y="150" width="20" height="100" fill="#FFF"/>
+                <rect x="780" y="200" width="20" height="5" fill="#FFF"/>
+            </g>
+
+            <!-- Players -->
+            <g id="players">
+                <rect id="player1" x="40" y="150" width="20" height="100" fill="#FFC107"/>
+                <rect id="player2" x="740" y="150" width="20" height="100" fill="#2196F3"/>
+            </g>
+
             <!-- Ball -->
-            <circle id="ball" cx="400" cy="200" r="10" fill="#000000"/>
+            <circle id="ball" cx="400" cy="200" r="10" fill="#FFF"/>
         </svg>
 
-        <!-- Score display -->
-        <div id="score">0 - 0</div>
+        <!-- Scoreboard -->
+        <div id="scoreboard">
+            <span id="score">0 - 0</span>
+            <span id="timer">Time: 60</span>
+        </div>
 
-        <!-- Timer display -->
-        <div id="timer">Time: 60</div>
-
-        <!-- Button container -->
-        <div id="buttonContainer">
-            <!-- Start Game button -->
+        <!-- Controls -->
+        <div id="controls">
             <button id="startButton">Start Game</button>
-            <!-- Reset Game button -->
             <button id="resetButton">Reset Game</button>
         </div>
     </div>
 
-    <!-- JavaScript file for game logic -->
+    <!-- Scripts -->
     <script src="game.ts"></script>
 </body>
 </html>
