--- a/index.html
+++ b/index.html
@@ -9,29 +9,40 @@
 <body>
     <div class="container">
         <!-- Football Field -->
-        <svg id="footballField" width="800" height="400">
-            <rect x="0" y="0" width="800" height="400" fill="#4CAF50"/>
+        <svg id="footballField" width="800" height="500">
+            <!-- Grass -->
+            <rect x="0" y="0" width="800" height="500" fill="#4CAF50"/>
 
-            <!-- Left Goal -->
+            <!-- Goals -->
             <g id="leftGoal">
-                <rect x="0" y="150" width="20" height="100" fill="#FFF"/>
-                <rect x="0" y="200" width="20" height="5" fill="#FFF"/>
+                <!-- Goal posts -->
+                <rect x="0" y="200" width="20" height="100" fill="#FFFFFF"/>
+                <rect x="0" y="200" width="5" height="100" fill="#000000"/>
+                <rect x="0" y="200" width="20" height="5" fill="#000000"/>
+                <rect x="0" y="300" width="20" height="5" fill="#000000"/>
+                <!-- Goal net -->
+                <path d="M20 200 L80 150 L80 250 L20 300 Z" fill="#FFFFFF" stroke="#000000" stroke-width="2"/>
             </g>
-
-            <!-- Right Goal -->
             <g id="rightGoal">
-                <rect x="780" y="150" width="20" height="100" fill="#FFF"/>
-                <rect x="780" y="200" width="20" height="5" fill="#FFF"/>
+                <!-- Goal posts -->
+                <rect x="780" y="200" width="20" height="100" fill="#FFFFFF"/>
+                <rect x="795" y="200" width="5" height="100" fill="#000000"/>
+                <rect x="780" y="200" width="20" height="5" fill="#000000"/>
+                <rect x="780" y="300" width="20" height="5" fill="#000000"/>
+                <!-- Goal net -->
+                <path d="M780 200 L720 150 L720 250 L780 300 Z" fill="#FFFFFF" stroke="#000000" stroke-width="2"/>
             </g>
 
             <!-- Players -->
             <g id="players">
-                <rect id="player1" x="40" y="150" width="20" height="100" fill="#FFC107"/>
-                <rect id="player2" x="740" y="150" width="20" height="100" fill="#2196F3"/>
+                <!-- Player 1 -->
+                <circle id="player1" cx="50" cy="250" r="20" fill="#FFC107"/>
+                <!-- Player 2 -->
+                <circle id="player2" cx="750" cy="250" r="20" fill="#2196F3"/>
             </g>
 
             <!-- Ball -->
-            <circle id="ball" cx="400" cy="200" r="10" fill="#FFF"/>
+            <circle id="ball" cx="400" cy="250" r="10" fill="#FFF"/>
         </svg>
 
         <!-- Scoreboard -->
