--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <svg id="footballField" width="800" height="500">
             <!-- Grass -->
             <rect x="0" y="0" width="800" height="500" fill="#4CAF50"/>
-
+            
             <!-- Goals -->
             <g id="leftGoal">
                 <!-- Goal posts -->
@@ -35,10 +35,14 @@
 
             <!-- Players -->
             <g id="players">
-                <!-- Player 1 -->
+                <!-- Player 1 (Goalkeeper) -->
                 <circle id="player1" cx="50" cy="250" r="20" fill="#FFC107"/>
                 <!-- Player 2 -->
-                <circle id="player2" cx="750" cy="250" r="20" fill="#2196F3"/>
+                <circle id="player2" cx="200" cy="250" r="20" fill="#2196F3"/>
+                <!-- Player 3 -->
+                <circle id="player3" cx="400" cy="150" r="20" fill="#FFC107"/>
+                <!-- Player 4 -->
+                <circle id="player4" cx="600" cy="350" r="20" fill="#2196F3"/>
             </g>
 
             <!-- Ball -->
